# datascope_apis

./: .gitignore  README.md  pyproject.toml  script_create_exchange_list.py  script_intraday.py  script_intraday_multi.py  script_tick_data.py  script_tick_data_example.py  script_tick_data_multi_thread.py
.githooks/: pre-push
documents/: PROJECT_STRUCTURE.md
documents/rics/: call_option_matuirty_months.json  future_maturity_months.json  put_option_maturity_months.json  ric_notes.md
input/: Different_exchanges.csv  Trades_data1.csv  Trades_data2.csv  unique_exchanges.csv
scripts/: README.md  extraction_example.py  test_try.py
scripts/bond_future/: get_bond_future_data.py  get_bond_future_data.sh
scripts/connection/: script_auth.py  script_token_validate.py
scripts/examples/: extraction_example.py
scripts/ff_data_20251127/: script_ff_data.py
scripts/market_data/: script_extract_missed_data.py
scripts/multi_threads/: script_marekt_depth_comparsion.py  script_multi_threads_extraction.py
scripts/sofr_swap_data/: sofr_swap.py
scripts/tick_data_20240906/: README.md  tick_data.sh  tick_data_20240906.py
scripts/tick_data_20241212/: README.md  get_tick_data.sh  tick_data_validator.py
scripts/tick_data_20260303/: rics.xlsx  tick_data_20260303.py
scripts/trade_data_20251121/: script_trade_data.py  script_trade_data_text.py  text.csv
scripts/utils/: read_big_csv.py  script_date_split.py  script_datetime.py  script_multi_threads.py
scripts/vol_surface/: draw_iv_surface.py
src/: __init__.py  application.example.ini  application.ini  utils.py
(+242 files in other folders)
