[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascope-apis"
version = "0.2.0"
description = "Refinitiv DataScope extraction/search toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pandas>=1.5",
  "numpy>=1.23",
  "python-dateutil>=2.8",
  "scipy>=1.10",
  "pydantic>=1.10",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
addopts = "-q -m 'not integration'"
python_files = ["test_*.py"]
markers = [
  "integration: tests that require live DataScope credentials and network access",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
